bundles/roboconf-core/src/test/resources/configurations/valid/complex-instances.instances
# 1st set of instances
instanceof VM {
	name: i-vm-1;

	instanceof Tomcat {
		name: i-tomcat;
		Tomcat.port: 9004;

		instanceof WAR {
			name: i-war;
		}
	}
}

# 2nd set of instances
instanceof VM {
	name: i-vm-2;
}

# 3rd set of instances
instanceof VM {
	name: i-vm-3;

	instanceof Tomcat {
		name: i-tomcat-1;
	}

	instanceof Tomcat {
		name: i-tomcat-2;
		Tomcat.port: 9004;

		instanceof WAR {
			name: i-war;
		}
	}
}
