bundles/roboconf-core/src/test/resources/configurations/invalid/duplicate-instance.instances
# Overridden exports

instance of VM {
	name: VM1;
	
	instance of Tomcat {
		name: tomcat;
	}
	
	instance of Tomcat {
		name: tomcat;
	}
}
